Update push image to use relative path

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -54,7 +54,7 @@ html, body {
 }
 
 #push-phone {
-  background-image: url('/assets/push-phone.svg');
+  background-image: url('push-phone.svg');
   background-position: left;
   background-repeat: no-repeat;
   width: 382px;
